--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -3,157 +3,8 @@
 ---
 
 // Import Sass Bulma.io CSS Framework
-@import 'bulma';
+@import 'bulma_postload';
 
 {% include css/Trirong.css %}
 {% include css/font-awesome-all-5.2.0.css %}
 {% include css/forms-min.css %}
-
-.user-link{
-  color: #4a4a4a;
-  margin: 8px;
-}
-
-@mixin word-wrap() {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word;
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
-  }
-
-.word-wrap {
-    @include word-wrap();
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.pagination-item{
-  margin-right:1rem;
-}
-
-html {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 15px;
-}
-
-.highlighted {
-  background-color: yellow; 
- }
-
-.card{
-  margin:1rem;
-  padding: 0.3rem;
-  border-radius: 5px;
-}
-
-.card-content{
-  padding: 0.7rem;
-}
-
-h1,h2,h3, .title, .logo{
-    font-family: 'Trirong', sans-serif;
-    font-weight: 600;
-    // font-family: 'supermarket', Helvetica, Arial, sans-serif;
-}
-
-.logo a{
-  color:  #0D47A1;
-}
-
-.box{
-  box-shadow: none;
-  padding: .9rem;
-}
-
-.subtitle{
-  color: $grey-light;
-}
-
-.subtitle .description{
-  font-size: 2pt;
-}
-
-.post-list a, .title a {
-  color: $grey-dark;
-}
-
-.post-list a:hover, .title a:hover {
-  color: $blue;
-}
-
-.tag a{
-  color: $grey-dark;
-}
-
-// header
-.menu-link a{
-  color: $grey-dark;  
-  margin-right:1rem;
-  line-height: 2.3;
-  text-transform: lowercase;
-}
-.active {
-  font-weight: bold;
-}
-.menu-link a:hover{
-  color: $blue;
-}
-
-
-.content blockquote{
-  background-color: $white;
-  font-style: italic;
-  color: $grey;
-}
-
-.footer{
-  background-color: transparent;
-}
-
-
-img[class=post-cover]{
-  max-height: 300px; 
-  width: 100%;
-  object-fit: cover ;
-}
-
-img[class=post-list]{
-  max-height: 200px; 
-  max-width: 100%;
-
-}
-
-/* Related posts */
-.related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-.related-posts {
-  padding-left: 0;
-  list-style: none;
-}
-.related-posts h3 {
-  margin-top: 0;
-}
-.related-posts li small {
-  font-size: 75%;
-  color: #999;
-}
-.related-posts li a:hover {
-  color: #268bd2;
-  text-decoration: none;
-}
-.related-posts li a:hover small {
-  color: inherit;
-}
