--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -22,7 +22,7 @@
               <!-- <span class="menu-link"><a href="/about" >about</a></span>
               <span class="menu-link"><a href="/project" >project</a></span>
               <span class="menu-link"><a href="/" >blog</a></span> -->
-              <span class="menu-link is-size-4 is-size-6-mobile"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
+              <span class="menu-link is-size-6"><a href="/search"><i class="fas fa-search 2x"></i></a></span>
           </div>
           <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
 
