--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -50,6 +50,9 @@
   <script type="text/javascript">
     {% include js/loadCSS.min.js %}
   </script>
+  <script type="text/javascript">
+  {% include js/pace.min.js %}
+  </script>
   <script>
     (function () {
       loadCSS("{{ site.baseurl }}/public/css/styles.css");
@@ -63,6 +66,11 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+
+  
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/public/css/pace-theme-flash.css">
+  <script type="text/javascript" src="{{ site.baseurl }}/public/js/pace.min.js"></script> -->
+
   <!--  Google Analytics Script-->
   <script>
     (function (i, s, o, g, r, a, m) {
