--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -4,7 +4,7 @@
 
 // Import Sass Bulma.io CSS Framework
 @import 'bulma_preload';
-
+{% include css/pace-theme-flash.css %}
 
 .user-link{
   color: #4a4a4a;
